add_executable(GIS GIS.cpp CommandProcessor.cpp CommandProcessor.h  SystemManager.cpp SystemManager.h GISRecord.cpp GISRecord.h Logger.cpp Logger.h World.cpp World.h NameIndex.cpp NameIndex.h CoordinateIndex.cpp CoordinateIndex.h BufferPool.cpp BufferPool.h FileManager.cpp FileManager.h PRQuadTree.cpp PRQuadTree.h DMS.cpp Hashtable.cpp Hashtable.h)